--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.6"
 services:
   server:
-    image: server:${GITHUB_SHA:-latest}
+    image: server
     ports:
       - 4000:4000
     volumes:
@@ -10,7 +10,7 @@ services:
       - /app/node_modules
     build: ./server
   client:
-    image: client:${GITHUB_SHA:-latest}
+    image: client
     volumes:
       - dist:/app/dist
       - ./client:/app
